fixed layout problem

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -11,9 +11,6 @@
     list-style:none;
     margin-bottom:25px;
   }
-  ul li img {
-    cursor: pointer;
-  }
 }
 .thumbnail {
   position: relative;
